# python-project-lvl3

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
page_loader/: __init__.py  assets.py  cli.py  exceptions.py  file.py  html.py  media.py  page.py  resource.py  slug.py  storage.py  url.py
page_loader/scripts/: page_loader.py
tests/: test_assets.py  test_cli.py  test_file.py  test_html.py  test_media.py  test_page.py  test_slug.py  test_storage.py  test_url.py
tests/fixtures/: page-with-assets.html  script.js
tests/fixtures/cassettes/: test_download
