[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Abdu <abdujabbar.mirkhalikov@gmail.com>"]

packages = [
  { include = "page_loader" },
]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.27.1"
flake8 = "^4.0.1"
bs4 = "^0.0.1"
pytest = "^7.1.2"
validators = "^0.19.0"
requests-mock = "^1.9.3"
progress = "^1.6"
pytest-cov = "^3.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
page-loader = "page_loader.scripts.page_loader:main"



